tests/custom/STARIS_2022/basic/multiset-operators/hist-type-error/stderr.expected
Error:
    hist-type-error.essence:3:20:
  |
3 | such that h = hist(s)
  |                    ^
Type error:
	Expected: matrix, list or mset
	Got: set of int

